# stackai-auth-poc

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_07_23_04_39_00f2d1ffc2bd_initial.py  2024_07_23_04_45_aab21beede8f_seeding.py
auth/: app.py  app_factory.py  enums.py  helper.py  settings.py
auth/api/: authenticate.py  organization.py  router.py  routes.py  team.py  worlflow.py
auth/db/: __init__.py  connection.py  constants.py
auth/db/compilers/: dates.py
auth/db/type_utils/: __init__.py  dt.py  enum.py  uuid.py
auth/domains/: authenticate.py
auth/managers/: base.py  user.py
auth/models/: __init__.py  base.py  user.py
auth/models/orm/: tables.py
auth/schemas/: auth.py  base.py  team.py  user.py
auth/services/: supabase.py
